Edited wiki page Changelog through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@2132 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -19,6 +19,7 @@ Yet to be released. Planned changes:
   * *Vector-model inputs will be changed:* transmission input will be in the form of a seasonality profile and IBPAPA (infectious bites per adult per annum), where the seasonality profile can be that of transmission (as before) or that of vector densities. Fitting of internal parameters to reproduce this seasonality _should_ be better than before (in progress).
   * SchemaTranslator is now compiled by cmake (output is _build_/util/SchemaTranslator/SchemaTranslator.jar)
   * Seasonality parameterisation of per-vector transmission is now input differently to allow other data sources to be used as seasonality inputs in the future.
+  * Added an output: `nMassScreenings` (number of diagnostics used by MSAT, or number of recipients of MDA if no diagnostic is used)
 
 
 == Schema Version 29 ==
