--- a/wiki/ScenarioDesign.wiki
+++ b/wiki/ScenarioDesign.wiki
@@ -1,12 +1,14 @@
 #summary Design of scenarios and XML configuration
 
-= Design of scenario configuration =
+= Scenarios and Experiments =
 
-OpenMalaria is designed to run small-medium scale independent simulations. If you want to design an experiment evaluating the impact of one of more factors, you may want to read about [ExperimentDesign designing experiments].
+Simulation modeling usually involves running many distinct simulations to compare the effects of changes in model structure or parameters.  This section considers only how to set up a single simulation (_scenario_).  If you want to design an experiment evaluating the impact of one of more factors, and hence running many _scenarios_, you may want in addition to read about [ExperimentDesign designing experiments].
 
-The following is intended as an easy to read and use guide to creating scenarios. For a curter reference guide, see [XmlScenario].
+= Design of configuration files =
 
-Within a simulation of a single setting, dubbed a _scenario_, there are a number of choices to make, outlined below. These choices are entered as XML elements. Removing much of the detail, such an XML file looks like this:
+This text explains the structure of the configuration files used by OpenMalaria to run each simulation. It is intended as an accessible guide to creating scenarios. For a concise reference guide (with less explanation), see [XmlScenario].
+
+Within a simulation of a single setting (a _scenario_), there are a number of choices to make, outlined below. These choices are entered as XML elements. Removing much of the detail, such an XML file looks like this:
 
 {{{
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
