--- a/wiki/XmlMonitoring.wiki
+++ b/wiki/XmlMonitoring.wiki
@@ -132,3 +132,4 @@ the cohort; if false, it is unaffected by the cohort mode. A number means that f
 || 52 || nMDAs || age group || y || Number of drug doses given via mass deployment (MDA or screen&treat) (where configured as screen&treat, etc., this only reports treatments actually prescribed). As of schema 26, this output only reports anything on a 1-day time-step; in the future it will also work on a 5-day timestep. ||
 || 53 || nNmfDeaths || age group || y || Direct deaths due to non-malaria fevers ||
 || 54 || nAntibioticTreatments || age group || y || Report number of antibiotic treatments administered ||
+|| 55 || nScreens || age group || n.a. || Report number screens in MSAT (not yet implemented in simulator) ||
