--- a/wiki/EIRSeasonDynamic.wiki
+++ b/wiki/EIRSeasonDynamic.wiki
@@ -70,20 +70,22 @@ As of schema version 22 this method of entering EIR was added to simplify entry 
 The `monthlyEIR` element requires one attribute: `annualEIR`, specifying the total annual EIR as infectious bites per person per year. It should have a sequence of 12 child elements, named `item`, specifying the relative in terms of infectious bites per person per month (which might be approximated by densities of  mosquito densities, with an appropriate lag), in the months of January through December. The overall EIR is scaled to the annualEIR value indicated at the top of the element. An (unrealistic) example:
 
 {{{
-        <monthlyEIR annualEIR="20">
-          <item>10</item>
-          <item>1</item>
-          <item>1</item>
-          <item>1</item>
-          <item>1</item>
-          <item>1</item>
-          <item>1</item>
-          <item>1</item>
-          <item>1</item>
-          <item>1</item>
-          <item>1</item>
-          <item>1</item>
-        </monthlyEIR>
+        <seasonality annualEIR="20" input="EIR">
+          <monthlyValues smoothing="fourier">
+            <value>10</value>
+            <value>1</value>
+            <value>1</value>
+            <value>1</value>
+            <value>1</value>
+            <value>1</value>
+            <value>1</value>
+            <value>1</value>
+            <value>1</value>
+            <value>1</value>
+            <value>1</value>
+            <value>1</value>
+          </monthlyValues>
+        </seasonality>
 }}}
 
 == Seasonality in the static transmission mode (mode="2") ==
