--- a/wiki/ScenarioDesign.wiki
+++ b/wiki/ScenarioDesign.wiki
@@ -65,57 +65,7 @@ This will also determine which [ModelClinical clinical / health system model] ma
 
 After selecting the within-host model to use, an appropriate `<model>...</model>` element should be copied. Note that while the sub-elements of `model` (in particular `ModelOptions`) _can_ be changed, in theory they have an effect on the optimal paramerization(s), so changing them would result in an invalid model.
 
-As of schema version 24, some further data is included within the `model` element:
-{{{
-<human>
-  <availabilityToMosquitoes>
-    <group lowerbound="0.0" value="0.225940909648"/>
-    <group lowerbound="1.0" value="0.286173633441"/>
-    <group lowerbound="2.0" value="0.336898395722"/>
-    <group lowerbound="3.0" value="0.370989854675"/>
-    <group lowerbound="4.0" value="0.403114915112"/>
-    <group lowerbound="5.0" value="0.442585112522"/>
-    <group lowerbound="6.0" value="0.473839351511"/>
-    <group lowerbound="7.0" value="0.512630464378"/>
-    <group lowerbound="8.0" value="0.54487872702"/>
-    <group lowerbound="9.0" value="0.581527755812"/>
-    <group lowerbound="10.0" value="0.630257580698"/>
-    <group lowerbound="11.0" value="0.663063362714"/>
-    <group lowerbound="12.0" value="0.702417432755"/>
-    <group lowerbound="13.0" value="0.734605377277"/>
-    <group lowerbound="14.0" value="0.788908765653"/>
-    <group lowerbound="15.0" value="0.839587932303"/>
-    <group lowerbound="20.0" value="1.0"/>
-    <group lowerbound="20.0" value="1.0"/>
-  </availabilityToMosquitoes>
-  <weight multStdDev="0.14">
-    <group lowerbound="0.0" value="13.9856718"/>
-    <group lowerbound="1.0" value="18.30372108"/>
-    <group lowerbound="2.0" value="21.745749"/>
-    <group lowerbound="3.0" value="24.25753512"/>
-    <group lowerbound="4.0" value="26.06595444"/>
-    <group lowerbound="5.0" value="28.48868784"/>
-    <group lowerbound="6.0" value="30.84202788"/>
-    <group lowerbound="7.0" value="33.48638244"/>
-    <group lowerbound="8.0" value="35.20335432"/>
-    <group lowerbound="9.0" value="37.19394024"/>
-    <group lowerbound="10.0" value="40.1368962"/>
-    <group lowerbound="11.0" value="42.00539916"/>
-    <group lowerbound="12.0" value="44.53731348"/>
-    <group lowerbound="13.0" value="46.77769728"/>
-    <group lowerbound="14.0" value="49.48396092"/>
-    <group lowerbound="15.0" value="54.36"/>
-    <group lowerbound="20.0" value="60.0"/>
-    <group lowerbound="20.0" value="60.0"/>
-  </weight>
-</human>
-}}}
-The `weight` data is only required for 1-day timestep models; the `availabilityToMosquitoes` data is needed for all models. Graphs of the availability and weight data with interpolations (linear interpolations, shown by the blue lines, are enabled by default):
-
-<wiki:comment>
-Graphs generated with the `trunk/unittest/AgeGroupInterpolationSuite.py` script.
-</wiki:comment>
-http://openmalaria.googlecode.com/svn/wiki/graphs/human_avail_and_mass_age.png
+The `model` element also includes data for some [ModelHumanMisc small human-related models].
 
 Our set of 14 parameterisations can be downloaded here: [http://code.google.com/p/openmalaria/source/browse/#svn%2Fdownload%2Fexperiments%2Fmodels-5-day http://code.google.com/p/openmalaria/source/browse/#svn/download/experiments/models-5-day]
 
